<resources>
    <string name="app_name">Virtual Notebook</string>
    <string name="title_activity_showdata_listview">ShowdataListview</string>
    <string name="large_text">
        This is a test..
    </string>
    <string name="action_settings">Settings</string>
    <string name="english_TextView">English</string>
    <string name="french_TextView">French</string>
    <string name="title_activity_test">Test</string>
    <string name="title_home">Home</string>
    <string name="title_notebook">Notebook</string>
    <string name="title_test">Test</string>
    <string name="title_category">Category</string>
    <string name="title_add">Add word</string>
    <string name="category_one">Fruits</string>
    <string name="category_two">Animals</string>
    <string name="category_tree">Education</string>
    <string name="category_four">Electronics</string>
    <string name="category_five">Transport</string>
    <string name="category_six">Others</string>
    <string name="quest_msg">What is the french translation of:  </string>
    <string name="test_word">Test word</string>
    <string name="overflow_import">Import List</string>
    <string name="overflow_export">Export List</string>



    <string-array name="names">
        <item>Choose a Category</item>
        <item>Animal</item>
        <item>Education</item>
        <item>Electronic</item>
        <item>Fruit</item>
        <item>Media</item>
        <item>Transport</item>
        <item>Other</item>
    </string-array>

</resources>
