<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/navigation_notebook"
        android:icon="@drawable/ic_book_black"
        android:title="@string/title_notebook" />
    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/ic_add_circle_outline_black_24dp"
        android:title="@string/title_add"
        />
    <item
        android:id="@+id/navigation_test"
        android:icon="@drawable/ic_assessment_black_24dp"
        android:title="@string/title_test"
        />
    <item
        android:id="@+id/navigation_cathegory"
        android:icon="@drawable/ic_language_black_24dp"
        android:title="@string/title_category"
        />

</menu>