<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C0000000"
    android:paddingTop="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    >


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:layout_gravity="fill_horizontal"
            android:background="#C0C0C0"
            android:text="@string/category_one"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:id="@+id/categoryFruits"
            android:clickable="true"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:layout_gravity="fill_horizontal"
            android:background="@color/colorPrimaryDark"
            android:text="@string/category_two"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:id="@+id/categoryAnimal"
            android:clickable="true"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:layout_gravity="fill_horizontal"
            android:background="@color/colorPrimary"
            android:text="@string/category_tree"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:id="@+id/categoryEdu"
            android:clickable="true"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:layout_gravity="fill_horizontal"
            android:background="#C0C0C0"
            android:text="@string/category_four"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:id="@+id/categoryElec"
            android:clickable="true"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:layout_gravity="fill_horizontal"
            android:background="#C0C0C0"
            android:text="@string/category_five"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:id="@+id/categoryTrans"
            android:clickable="true"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:layout_gravity="fill_horizontal"
            android:background="@color/colorPrimary"
            android:text="@string/category_six"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:id="@+id/categoryOthers"
            android:clickable="true"/>


    </GridLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        >

        <android.support.design.widget.BottomNavigationView
            android:id="@+id/navigation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="?android:attr/windowBackground"
            app:menu= "@menu/navigation"

            />

    </RelativeLayout>
</RelativeLayout>